--- a/StoreApp/StoreApp.WebApp/Views/Customer/Search.cshtml
+++ b/StoreApp/StoreApp.WebApp/Views/Customer/Search.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Search";
 }
 
-<h1>Search</h1>
+<h2>Enter a username to search for:</h2>
 <form asp-action="Search">
     <input type ="text" name="search"/>
     <button type="submit">Search</button>
