--- a/StoreApp/StoreApp.WebApp/Views/Order/PlaceOrder.cshtml
+++ b/StoreApp/StoreApp.WebApp/Views/Order/PlaceOrder.cshtml
@@ -7,43 +7,14 @@
 <h1>PlaceOrder</h1>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="PlaceOrder" method="get">
+        <form asp-action="GetProducts">
             <div class="form-group">
                 <select asp-for="StoreId" asp-items="@(new SelectList(@ViewBag.locations,"StoreId","Name"))"></select>
+             
                 <input type="submit"/>
-
             </div>
         </form>
-        <form>
-            <div class="form-group">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>@Model.Name</th>
-                            <th>Product Name</th>
-                            <th>Stock</th>
-                            <th>Quantity</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach(var item in Model.Inventory.Keys)
-                        {
-                        <tr>
-                            <td></td>
-                            <td>
-                                @item.Name
-                            </td>
-                            <td>
-                                @Model.Inventory[item]
-                            </td>
-                            <td><input type="text" name="qty"/></td>
-                        </tr>
-                        }
-                        
-                    </tbody>
-                </table>
-            </div>
-        </form> 
+        
     </div>
 
 </div>
