Edit order views, selecting products working

--- a/StoreApp/StoreApp.WebApp/Views/Home/Index.cshtml
+++ b/StoreApp/StoreApp.WebApp/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
             </tr>
             <tr>
                 <td>Place an order</td>
-                <td><a asp-controller="Order" asp-action="PlaceOrder">Order</a></td>
+                <td><a asp-controller="Order" asp-action="GetLocation">Order</a></td>
             </tr>
             <tr>
                 <td>Customer Order History</td>
