--- a/StoreApp/StoreApp.WebApp/Views/Order/GetLocation.cshtml
+++ b/StoreApp/StoreApp.WebApp/Views/Order/GetLocation.cshtml
@@ -1,13 +1,13 @@
 ﻿
 @model StoreApp.Library.Model.Store
 @{
-    ViewData["Title"] = "PlaceOrder";
+    ViewData["Title"] = "Locations";
 }
 
 <h1>PlaceOrder</h1>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="GetProducts">
+        <form asp-action="GetProducts" method="get">
             <div class="form-group">
                 <select asp-for="StoreId" asp-items="@(new SelectList(@ViewBag.locations,"StoreId","Name"))"></select>
              
