--- a/StoreApp/StoreApp.WebApp/Views/Order/GetProducts.cshtml
+++ b/StoreApp/StoreApp.WebApp/Views/Order/GetProducts.cshtml
@@ -33,10 +33,52 @@
     </table>
 </div>
 <div>
-    <form asp-action="GetProducts">
+    <form asp-action="GetProducts" method="post" asp-route-StoreId="@Model.StoreId">
         <div class="form-group">
-            <select asp-items="@(new SelectList(Model.Inventory.Keys,"ProductId","Name"))"></select>
-            <input type="submit" />
+            <label>Product<select name="ProductId" asp-items="@(new SelectList(Model.Inventory.Keys,"ProductId","Name"))"></select></label>
+            <label for="qty">Qty</label>
+            <input type="text" name="qty" required/>
+            <input type="submit" value="Add" />
         </div>
     </form>
 </div>
+<div>
+    <h2>Order</h2>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Product Name</th>
+                <th>Price</th>
+                <th>Qty</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Inventory.Keys)
+            {
+                <tr>
+                    <td>
+                        @item.Name
+                    </td>
+                    <td>
+                        @item.Price
+                    </td>
+                    <td>
+                        @TempData[item.Name] 
+                    </td>
+                </tr>
+            }        
+        </tbody>
+        <tfoot>
+            <tr>
+                <th>
+                    Total Cost
+                </th>
+                <th>
+                    @ViewData["Total"]
+                </th>
+                <th></th>
+            </tr>
+        </tfoot>
+    </table>
+</div>
+
