--- a/StoreApp/StoreApp.WebApp/Views/Home/Index.cshtml
+++ b/StoreApp/StoreApp.WebApp/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
                <td><a asp-controller = "Customer" asp-action ="RegisterCustomer">Register</a></td>
            </tr> 
             <tr>
-                <td>Search customers by Username</td>
+                <td>Sign In</td>
                 <td><a asp-controller="Customer" asp-action="Search">Search</a></td>
             </tr>
             <tr>
@@ -24,7 +24,7 @@
             </tr>
             <tr>
                 <td>Location History</td>
-                <td><a>View</a></td>
+                <td><a asp-controller="Order" asp-action="LocationOrderHistory">View</a></td>
             </tr>
             <tr>
                 <td>Products</td>
