--- a/StoreApp/StoreApp.WebApp/Views/Order/Details.cshtml
+++ b/StoreApp/StoreApp.WebApp/Views/Order/Details.cshtml
@@ -72,5 +72,5 @@
 </div>
 
 <div>
-    <a asp-action="OrderHistory" asp-route-username="@Model.CustomerUsername">Back to List</a>
+    <a asp-controller="Home" asp-action="Index">Home</a>
 </div>
