--- a/StoreApp/StoreApp.WebApp/Views/Customer/Details.cshtml
+++ b/StoreApp/StoreApp.WebApp/Views/Customer/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>New Customer Information</h4>
+    <h4>Customer Information</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
