Project 1 functionality completed, styling, validation tokens, and logging added

--- a/StoreApp/StoreApp.WebApp/Views/Home/Index.cshtml
+++ b/StoreApp/StoreApp.WebApp/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to "StoreName"</h1>
-    <div>
+    <h1 class="display-4">Welcome to Store Application</h1>
+    <div id="HomeMenu">
         <table class="table">
            <tr>
                <td>Register as a new customer</td>
@@ -25,10 +25,6 @@
             <tr>
                 <td>Location History</td>
                 <td><a asp-controller="Order" asp-action="LocationOrderHistory">View</a></td>
-            </tr>
-            <tr>
-                <td>Products</td>
-                <td>View</td>
             </tr>
         </table>
     </div>
