Added some controller unit tests and some more input validation

--- a/StoreApp/StoreApp.WebApp/Views/Customer/Search.cshtml
+++ b/StoreApp/StoreApp.WebApp/Views/Customer/Search.cshtml
@@ -8,3 +8,4 @@
     <input type ="text" name="search"/>
     <button type="submit">Search</button>
 </form>
+<p id="ErrorMsg">@TempData["ErrorMsg"]</p>
