--- a/StoreApp/StoreApp.WebApp/Views/Order/GetLocation.cshtml
+++ b/StoreApp/StoreApp.WebApp/Views/Order/GetLocation.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h1>Select a Location</h1>
+<p id="ErrorMsg">@TempData["ErrorMsg"]</p>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="GetProducts" method="get">
