--- a/StoreApp/StoreApp.WebApp/Views/Customer/Details.cshtml
+++ b/StoreApp/StoreApp.WebApp/Views/Customer/Details.cshtml
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Username}) |
+    @Html.ActionLink("Edit", "Edit", new { username = Model.Username}) |
     <a asp-controller="Home" asp-action="Index">Home</a>
 </div>
